<resources>
    <string name="app_name">Evdaş</string>
    <string name="title_home">Ana Sayfa</string>
    <string name="title_my_profile">Profilim</string>
    <string name="title_notifications">Bildirimler</string>
    <string name="title_search">Haritada Ara</string>
    <string name="logout">Çıkış Yap</string>
    <string name="forgot_pass">Şifremi unuttum.</string>
    <string name="slogan">Ev arkadaşını bul!</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="mail">E-Mail *</string>
    <string name="password">Şifre *</string>
    <string name="name">Ad *</string>
    <string name="surname">Soyad *</string>
    <string name="state">Durum *</string>
    <string name="phone">Cep Telefonu</string>
    <string name="kal_pay_g">Gün Sayısı:</string>
    <string name="question_mark"> \? </string>
    <string name="edu_information">Sınıf Bilgisi *</string>
    <string name="dep_name">Bölüm Adı *</string>
    <string name="department">Bölüm - Fakülte *</string>
    <string name="send_code">Doğrula</string>
    <string name="password_again">Şifre Tekrar *</string>
    <string name="std_yildiz_edu_tr">\@std.yildiz.edu.tr</string>
    <string name="gmail_com">\@gmail.com</string>
    <string name="et_km">Kampüse olan/istenen uzaklık (km)</string>
    <string name="state_profile">Durum: </string>
    <string name="state_change">Aramıyor</string>
    <string name="send_match">Eşleşme Talebi</string>
    <string name="grade_solid">Sınıf: </string>
    <string name="grade_change">Hazırlık</string>
    <string name="detailed_state">Detaylı Durum</string>
    <string name="create_profile_header">Profil Oluştur</string>
    <string name="save">Güncelle</string>
    <string name="no_phone">Cep Telefonu Yok</string>
    <string name="delete_account">Hesabı Sil</string>
    <string name="answered">Bu bildirimi yanıtladınız.</string>
    <string name="accept">Kabul Et</string>
    <string name="reject">Reddet</string>
    <string name="department_2">Bölüm - Fakülte</string>
    <string name="maps_api_key">AIzaSyC2bWY6nc2tXJPk5zZQAdJuwZ3bLcul-fg</string>
</resources>