<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.myapplication.ui.screens.SignIn">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:textColor="?attr/colorPrimary"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_subHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_header"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:textColor="?attr/colorPrimary"
        android:text="@string/slogan"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_subHeader"
        android:layout_marginTop="20dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:ems="17"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:ems="17" />

    <Switch
        android:id="@+id/show_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/et_email"
        android:layout_alignRight="@+id/et_password"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_pass_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:textColor="#FF0000"
        android:clickable="true"
        android:text="@string/forgot_pass"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_alignParentLeft="true"
        android:ems="8"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:ems="8"
        android:text="@string/sign_up" />


</RelativeLayout>