<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/search_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSecondary"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:text="@string/title_my_profile"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSecondary" />

        <ImageButton
            android:id="@+id/ib_update"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_edit_24"
            android:background="@drawable/imagebutton"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-black"
            android:text="Tam ad"
            android:textColor="?attr/colorPrimary"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_below="@+id/tv_full_name"
            android:layout_marginTop="40dp"
            android:src="@drawable/avatar"
            android:background="@color/white"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_profile"
            android:layout_alignTop="@+id/iv_profile"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="25dp"
            android:hint="@string/mail"/>

        <TextView
            android:id="@+id/tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:layout_alignLeft="@+id/tv_email"
            android:layout_marginTop="10dp"
            android:hint="@string/no_phone"/>

        <TextView
            android:id="@+id/tv_state_solid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tv_tel"
            android:layout_alignLeft="@+id/tv_tel"
            android:text="@string/state_profile"/>

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_state_solid"
            android:layout_toRightOf="@+id/tv_state_solid"
            android:text="@string/state_change"/>

        <TextView
            android:id="@+id/tv_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_profile"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:layout_alignLeft="@+id/iv_profile"
            android:layout_marginTop="10dp"
            android:text="Eğitim Bilgileri"
            android:ems="8"/>

        <TextView
            android:id="@+id/tv_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_education"
            android:layout_alignLeft="@+id/iv_profile"
            android:layout_marginTop="10dp"
            android:text="Bölüm - Fakülte"/>

        <TextView
            android:id="@+id/tv_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_department"
            android:layout_alignLeft="@+id/iv_profile"
            android:layout_marginTop="5dp"
            android:text="@string/grade_solid"/>

        <TextView
            android:id="@+id/tv_grade_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_grade"
            android:layout_toRightOf="@+id/tv_grade"
            android:text="@string/grade_change"/>

        <LinearLayout
            android:id="@+id/state_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_below="@+id/tv_grade"
            android:layout_alignLeft="@+id/iv_profile"
            android:visibility="invisible"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailed_state"
                android:fontFamily="sans-serif-black"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_profile"/>

                <TextView
                    android:id="@+id/tv_detailed_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_change"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Km message: "/>

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day message: "/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adres: "/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>